--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,21 @@
 {% block css %}
 {% endblock %}
 {% block body %}
+<style>
+    .pi{
+        font-family: 'Akaya Telivigala';font-size: 22px;
+        color:white;
+        
+    }
+</style>
+<div class="container">
+    <div class="row">
 <h2><b>An introduction to time series forecasting</b></h2>
- <p>Time series forecasts are used to predict a future value or a classification at a particular point in time. Here’s a brief overview of their common uses and how they are developed
+ <p class="pi">Time series forecasts are used to predict a future value or a classification at a particular point in time. Here’s a brief overview of their common uses and how they are developed.
 </p>
+</div>
+</div>
  {% endblock %}
 {% block js %}
 {% endblock %}
+
