--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,34 @@
     <title>PREDICT</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
     {% block css %} {% endblock %}
 </head>
+<style>
+.logo-image{
+  width: 46px;
+  height: 46px;
+  border-radius: 80%;
+  overflow: hidden;
+  margin-top: 6px;
+}
+</style>
+<style>
+  img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+</style>
+<style>
+  body {
+    background-image: url('https://drive.google.com/uc?export=view&id=1Z08uoy2tYUQQnjlHe0vu8IPySaXo5WUu');
+  }
+  </style>
 <body>
-    <nav class="navbar navbar-expand-sm navbar" style= "background-color: #fefefe;">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a target="_blank" href="https://drive.google.com/uc?export=view&id=1lRaWrkmsjmFPCRsea_O4lLcZFP0Q5xaH">
+          <img src="https://drive.google.com/uc?export=view&id=1lRaWrkmsjmFPCRsea_O4lLcZFP0Q5xaH" width="80px" height="65px"/> </a> &nbsp;&nbsp;
             <a class="navbar-brand" href="#">PREDICT</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
             aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,15 +42,66 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarID">
             <div class="navbar-nav">
+                <!-- <a href="https://drive.google.com/file/d/1lRaWrkmsjmFPCRsea_O4lLcZFP0Q5xaH/view?usp=sharing"> -->
                 <a class="nav-link active" aria-current="page" href="/home">Home</a>
-                <a class="nav-link active" aria-current="page" href="/">Login</a>
+                <!-- <a class="nav-link active" aria-current="page" href="/">Login</a>
                 <a class="nav-link active" aria-current="page" href="/register">Register</a>
                 <a class="nav-link active" aria-current="page" href="/uploads">Upload</a>
-                <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+                <a class="nav-link active" aria-current="page" href="/logout">Logout</a> -->
                 
-            </div>
+            
         </div>
     </nav>
+
+<style>
+#mySidenav a {
+  position: absolute;
+  left: -80px;
+  transition: 0.3s;
+  padding: 15px;
+  width: 100px;
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  border-radius: 0 5px 5px 0;
+}
+
+#mySidenav a:hover {
+  left: 0;
+}
+
+#login {
+  top: 50px;
+  background-color: #04AA6D;
+}
+
+#register {
+  top: 110px;
+  background-color: #2196F3;
+}
+
+#upload {
+  top: 170px;
+  background-color: #f44336;
+}
+
+#logout {
+  top: 230px;
+  background-color: #555
+}
+</style>
+</head>
+<body>
+
+<div id="mySidenav" class="sidenav">
+  <a href="/" id="login">Login</a>
+  <a href="/register" id="register">Register</a>
+  <a href="/uploads" id="upload">Upload</a>
+  <a href="/logout" id="logout">Logout</a>
+</div>
+    
+    
+
     {% block body %} {% endblock  %}
     {% block js %} {% endblock  %}
 </body>
