--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,11 @@
 
 
 {% block body %}
-
+<style>
+    .mb-3{
+        font-family: 'Akaya Telivigala';font-size: 22px;
+    }
+</style>
 <div class="container">
     <div class="row">
         
