--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,36 +1,34 @@
 {% extends 'base.html' %}
 
-{% block css %}
 
-{% endblock %}
 {% block body %}
+
+<style>
+    .mb-3{
+        font-family: 'Akaya Telivigala';font-size: 22px;
+    }
+</style>
 <div class="container">
     <div class="row">
-        <div class="col-sm-6 col-md-8 mx-auto mt-5">
-            {% include "notify.html" %}
-            <form class="card" method="post" enctype="multipart/form-data">
-                <div class="card-header">
-                    <p class="lead">please browse image to upload</p>
-                </div>
+        
+        <div class="col-md-5 mx-auto">
+            <h3 class="text-center p-3">
+               <b>UPLOAD</b>
+            </h3>
+            <form method="post" class="card" style="background-color: rgb(213, 214, 129);">
                 <div class="card-body">
-                    <div class="form-group">
-                      <label for="imageId">Image</label>
-                      <input type="file" name="file" class="form-control-file" name="imageId" id="imageId" placeholder="browse the image" aria-describedby="imageHelp">
-                      <small id="imageHelp" class="form-text text-muted">please select image below 2mb</small>
+                    <div class="mb-3">
+                        <label for="file_upload" class="form-label">Upload File(csv/xlsx)</label>
+                        <input type="file" class="form-control" id="file_upload" name="file_upload">
+                    </div>
+                    
+                    <div class="">
+                        <button type="submit" class="btn btn-primary"text-align="center">Submit</button>
                     </div>
                 </div>
-                <div class="card-footer">
-                    <button class="btn btn-primary">submit</button>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6 mx-auto">
-            <div class="card">
-                <img class="card-img-top" src="{{session['uploaded_file']}}" alt="" height="400">
             </div>
-        </div>
+        </form>
     </div>
+    
 </div>
 {% endblock %}
