--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,12 @@
 
 {% block body %}
 
+<style>
+    .mb-3{
+        font-family: 'Akaya Telivigala';font-size: 22px;
+    }
+</style>
+
 <div class="container">
     <div class="row">
         
@@ -10,7 +16,7 @@
             <h3 class="text-center p-3">
             <b>LOGIN</b> 
             </h3>
-            <form method="post" class="card" style="background-color: rgb(26, 108, 167);">
+            <form method="post" class="card" style="background-color: rgb(26, 109, 168);">
                 <div class="card-body">
                     <div class="mb-3">
                         <label for="email" class="form-label">E-mail</label>
@@ -30,5 +36,7 @@
         </form>
     </div>
     
+
+
 </div>
 {% endblock %}
