--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,34 +1,34 @@
 {% extends 'base.html' %}
 
+{% block css %}
 
+{% endblock %}
 {% block body %}
-
-<style>
-    .mb-3{
-        font-family: 'Akaya Telivigala';font-size: 22px;
-    }
-</style>
 <div class="container">
     <div class="row">
-        
-        <div class="col-md-5 mx-auto">
-            <h3 class="text-center p-3">
-               <b>UPLOAD</b>
-            </h3>
-            <form method="post" class="card" style="background-color: rgb(213, 214, 129);">
-                <div class="card-body">
-                    <div class="mb-3">
-                        <label for="file_upload" class="form-label">Upload File(csv/xlsx)</label>
-                        <input type="file" class="form-control" id="file_upload" name="file_upload">
-                    </div>
-                    
-                    <div class="">
-                        <button type="submit" class="btn btn-primary"text-align="center">Submit</button>
+        <div class="col-sm-4 col-md-5 mx-auto mt-5">
+                <h3 class="text-center p-3">
+                <b>UPLOAD</b>         
+                </h3>
+            {% include "notify.html" %}
+            <form class="card" method="post" enctype="multipart/form-data">
+                <div class="card-header" style="background-color: rgb(186, 33, 33);">
+                    <p class="lead" style="text-align: center; margin-top: 2%;"><b>Please Upload Dataset</b></p>
+                </div>
+                <div class="card-body" style="background-color: rgb(250, 250, 250);">
+                    <div class="form-group">
+                      <label for="imageId">file</label>
+                      <input type="file" name="file" class="form-control-file" name="imageId" id="imageId" placeholder="browse the dataset" aria-describedby="imageHelp">
+                      
                     </div>
                 </div>
-            </div>
-        </form>
+                <div class="card-footer" style="background-color: rgb(255, 255, 255);">
+                    <button class="btn btn-primary">submit</button>
+                </div>
+            </form>
+        </div>
     </div>
-    
+        </div>
+    </div>
 </div>
 {% endblock %}
