--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -22,7 +22,7 @@ body {
     width: .5rem;
     height: 100vh;
     background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
+    border: solid rgba(239, 11, 11, 0.15);
     border-width: 1px 0;
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
   }
@@ -44,7 +44,7 @@ body {
     align-items: center;
     padding: .25rem .5rem;
     font-weight: 600;
-    color: rgba(0, 0, 0, .65);
+    color: rgba(210, 22, 22, 0.936);
     background-color: transparent;
     border: 0;
   }
