--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 </style>
 <div class="container">
     <div class="row">
-<h2><b>An introduction to time series forecasting</b></h2>
+<h2><b style="color:rgb(128, 189, 230);">An introduction to time series forecasting</b></h2>
  <p class="pi">Time series forecasts are used to predict a future value or a classification at a particular point in time. Here’s a brief overview of their common uses and how they are developed.
 </p>
 </div>
