--- a/templates/login.html
+++ b/templates/login.html
@@ -13,8 +13,10 @@
     <div class="row">
         
 <div class="col-md-5 mx-auto">
-            <h3 class="text-center p-3">
-            <b>LOGIN</b>         
+    <br><br>
+            <h3 class="text-center p-4">
+            <b style="color: rgb(242, 247, 250);">LOGIN </b>           
+
             </h3>
             <form method="post" class="card" style="background-color: rgb(26, 109, 168);">
                 <div class="card-body">
