--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,8 @@
         
         <div class="col-md-5 mx-auto">
             <h3 class="text-center p-3">
-                <b>REGISTER</b>
+            <b style="color: rgb(242, 247, 250);">REGISTER </b>         
+                
             </h3>
             <form method="post" class="card" style="background-color: hwb(344 48% 12%);">
                 <div class="card-body">
