--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,26 +4,28 @@
 
 {% endblock %}
 {% block body %}
+
 <div class="container">
     <div class="row">
         <div class="col-sm-4 col-md-5 mx-auto mt-5">
                 <h3 class="text-center p-3">
-                <b>UPLOAD</b>         
+            <b style="color: rgb(242, 247, 250);">UPLOAD </b>         
+                        
                 </h3>
             {% include "notify.html" %}
             <form class="card" method="post" enctype="multipart/form-data">
                 <div class="card-header" style="background-color: rgb(186, 33, 33);">
-                    <p class="lead" style="text-align: center; margin-top: 2%;"><b>Please Upload Dataset</b></p>
+                    <p class="lead" style="text-align: center; margin-top: 2%;  font-family: 'Akaya Telivigala';font-size: 26px;"><b>Please Upload Dataset</b></p>
                 </div>
-                <div class="card-body" style="background-color: rgb(250, 250, 250);">
+                <div class="card-body" style="background-color: rgb(250, 250, 250);  font-family: 'Akaya Telivigala';font-size: 22px;">
                     <div class="form-group">
                       <label for="imageId">file</label>
                       <input type="file" name="file" class="form-control-file" name="imageId" id="imageId" placeholder="browse the dataset" aria-describedby="imageHelp">
                       
                     </div>
                 </div>
-                <div class="card-footer" style="background-color: rgb(255, 255, 255);">
-                    <button class="btn btn-primary">submit</button>
+                <div class="card-footer" style="background-color: rgb(255, 255, 255);  font-family: 'Akaya Telivigala';font-size: 22px;">
+                    <button class="btn btn-primary">Upload</button>
                 </div>
             </form>
         </div>
