--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
     
 <input type="checkbox" id="check">
 <label for="check">
-<i class="fas fa-bars" id="btn"></i>
+<i id="btn"><svg class="bi me-2" width="30" height="40"><use xlink:href="#tools"></use></svg></i>
 <i id="cancel">❌</i>
 </label>
 <div class="sidebar">
@@ -113,31 +113,31 @@
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
                     <a href="/home" class="nav-link text-white" aria-current="page">
-                        <svg class="bi me-2" width="16" height="16"><use xlink:href="Home"></use></svg>
+                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
                         Home
                     </a>
                 </li>
                 <li>
                     <a href="/" class="nav-link text-white">
-                        <svg class="bi me-2" width="16" height="16"><use xlink:href="Login"></use></svg>
+                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
                         Login
                     </a>
                 </li>
                 <li>
                     <a href="/register" class="nav-link text-white">
-                        <svg class="bi me-2" width="16" height="16"><use xlink:href="Register"></use></svg>
+                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#calendar3"></use></svg>
                         Register
                     </a>
                 </li>
                 <li>
                     <a href="/uploads" class="nav-link text-white">
-                        <svg class="bi me-2" width="16" height="16"><use xlink:href="Upload"></use></svg>
+                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#toggles2"></use></svg>
                         Upload
                     </a>
                 </li>
                 <li>
                     <a href="/" class="nav-link text-white">
-                        <svg class="bi me-2" width="16" height="16"><use xlink:href="Logout"></use></svg>
+                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#chevron-right"></use></svg>
                         Logout
                     </a>
                 </li>
