--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
 
 <div class="container">
     <div class="row">
+        {% include "notify.html" %}
         
 <div class="col-md-5 mx-auto">
     <br><br>
