--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
 </style>
 <div class="container">
     <div class="row">
-        
+        {% include "notify.html" %}
         <div class="col-md-5 mx-auto">
             <h3 class="text-center p-3">
             <b style="color: rgb(242, 247, 250);">REGISTER </b>         
