style home content

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,16 +7,39 @@
     .pi{
         font-family: 'Akaya Telivigala';font-size: 22px;
         color : whitesmoke;
-        
+        margin-left: 20px;
+    }
+    .pi1{
+        font-family: 'Akaya Telivigala';font-size: 22px;
+        color:rgb(128, 189, 230);
+        margin-left: 20px;
+        font-weight: bold;
+        font-size: 28px;
     }
 </style>
 <div class="container">
     <div class="row">
-<h2><b style="color:rgb(128, 189, 230);">An introduction to time series forecasting</b></h2>
- <p class="pi">Time series forecasts are used to predict a future value or a classification at a particular point in time. Here’s a brief overview of their common uses and how they are developed.
+<h2><b class="pi1">An introduction to Time Series Forecasting</b></h2>
+ <p class="pi">Time series forecasts are used to predict a future value or a classification at a particular point in time. Here’s a brief overview of their common uses and how they are developed. <br>
+    Prediction with respect to time is known as Time series forecasting. <br>
+Method of exploring and analyzing time-series data recorded over a set period of time.
+This technique is used to forecast values and make future predictions. <br>
+<br>
+Examples :
+<br>
+Profit/ loss Of a college <br>
+Find average expenditure <br>
+Forecast Admission records <br>
+Forecast Placement records <br>
+Traffic Forecasting <br>
+Bet Forecasting <br>
+
 </p>
+
 </div>
 </div>
+
+
  {% endblock %}
 {% block js %}
 {% endblock %}
