--- a/templates/base.html
+++ b/templates/base.html
@@ -173,7 +173,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: white;">
     © 2022 Copyright:
-    <b>PREDICT</b> --The Time Series Forecasting
+    <a href="/home" style="color:aquamarine;"><b>PREDICT</b></a> --The Time Series Forecasting
   </div>
   <!-- Copyright -->
 </footer>
