--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
         margin-left: 20px;
         font-weight: bold;
         font-size: 28px;
+
     }
 </style>
 <div class="container">
@@ -33,9 +34,9 @@ Forecast Admission records <br>
 Forecast Placement records <br>
 Traffic Forecasting <br>
 Bet Forecasting <br>
-
+<!-- <img src="/static/images/forestock.gif" width: 250px> -->
 </p>
-
+<iframe src="https://onedrive.live.com/embed?cid=E80342899EBC2DE7&resid=E80342899EBC2DE7%21110&authkey=AMFS-DpOggNJ_R8&em=2" width="300px" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 </div>
 
