--- a/templates/register.html
+++ b/templates/register.html
@@ -7,12 +7,13 @@
         font-family: 'Akaya Telivigala';font-size: 22px;
     }
 </style>
+{% include "notify.html" %}
 <div class="container">
     <div class="row">
         
         <div class="col-md-5 mx-auto">
             <h3 class="text-center p-3">
-            <b style="color: rgb(242, 247, 250);">REGISTER </b>         
+                <b style="color: rgb(242, 247, 250);">REGISTER </b>         
                 
             </h3>
             <form method="post" class="card" style="background-color: hwb(344 48% 12%);">
@@ -27,17 +28,17 @@
                         <input type="text" class="form-control" id="name" name="name">
                     </div>
                     
-
+                    
                     <div class="mb-3">
                         <label for="email" class="form-label">E-mail</label>
                         <input type="email" class="form-control" id="email" name="email">
                     </div>
-
+                    
                     <div class="mb-3">
                         <label for="Password" class="form-label">Password</label>
                         <input type="Password" class="form-control" id="Password" name="Password">
                     </div>
-
+                    
                     <div class="mb-3">
                         <label for="confirm_password" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirm_password" name="confirm_password">
@@ -47,9 +48,8 @@
                         <button type="submit" class="btn btn-primary"text-align="center">Submit</button>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
-    
 </div>
 {% endblock %}
