--- a/templates/register.html
+++ b/templates/register.html
@@ -22,11 +22,6 @@
                         <input type="text" class="form-control" id="username" name="username">
                     </div>
                     
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="name">
-                    </div>
-                    
 
                     <div class="mb-3">
                         <label for="email" class="form-label">E-mail</label>
@@ -34,8 +29,8 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="Password" class="form-label">Password</label>
-                        <input type="Password" class="form-control" id="Password" name="Password">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="Password" class="form-control" id="password" name="password">
                     </div>
 
                     <div class="mb-3">
