--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,12 @@
 {% endblock %}
 {% block body %}
 <style>
+
     .pi{
         font-family: 'Akaya Telivigala';font-size: 22px;
         color : whitesmoke;
         margin-left: 20px;
+        background-color: rgba(31, 45, 54, 0.567);
     }
     .pi1{
         font-family: 'Akaya Telivigala';font-size: 22px;
@@ -15,13 +17,14 @@
         margin-left: 20px;
         font-weight: bold;
         font-size: 28px;
+        background-color: rgba(54, 31, 39, 0.667);
 
     }
 </style>
 <div class="container">
     <div class="row">
-<h2><b class="pi1">An introduction to Time Series Forecasting</b></h2>
- <p class="pi">Time series forecasts are used to predict a future value or a classification at a particular point in time. Here’s a brief overview of their common uses and how they are developed. <br>
+<h2><b class="pi1"> An introduction to Time Series Forecasting </b></h2>
+ <p class="pi">Time series forecasts are used to predict a future value or a classification at a particular point in time. <br> Here’s a brief overview of their common uses and how they are developed. <br>
     Prediction with respect to time is known as Time series forecasting. <br>
 Method of exploring and analyzing time-series data recorded over a set period of time.
 This technique is used to forecast values and make future predictions. <br>
