--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
     </symbol>
   </svg>
   <main>
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-white " style="width: 280px; background-color: rgb(30 42 57 / 44%);">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-white vh-100 " style="background-color: rgb(30 42 57 / 44%);">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
         <svg class="bi me-2" width="37" height="32"><use xlink:href=""></use></svg>
         <span class="fs-4"><img src="/static/images/logo.png" alt=""></span>
@@ -136,14 +136,19 @@
         </li>
         
         <li>
+          <a href="/files" class="nav-link text-white">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="Files"></use></svg>
+            Files Uploaded
+          </a>
+        </li>
+        <li>
           <a href="/" class="nav-link text-white">
             <svg class="bi me-2" width="16" height="16"><use xlink:href="Logout"></use></svg>
             Logout
           </a>
         </li>
-        
-        
-      </div>
+      </ul>
+      
     </div>
     <div class="b-example-divider"></div>
     
