--- a/templates/column_selector.html
+++ b/templates/column_selector.html
@@ -29,7 +29,7 @@ table {
 {% include "notify.html" %}
 <h3 class="text-center p-3">
     <b style="color: rgb(242, 247, 250);">Select Columns for Forecasting </b>         
-    <p>Date column must be the first one</p>
+    <p style="color: rgba(172, 220, 249, 0.853);">Date column must be the first one</p>
 </h3>
 <div class="card shadow-lg m-5">
     {{df|safe}}
