--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<style>
+<!-- <style>
     .mb-3{
         font-family: 'Akaya Telivigala';font-size: 22px;
     }
@@ -41,5 +41,51 @@
     
 
 
+</div> -->
+<div class="container px-4 py-5 mx-auto">
+    <div class="card card0">
+        <div class="d-flex flex-lg-row flex-column-reverse">
+            <div class="card card1">
+                <div class="row justify-content-center my-auto">
+                    <div class="col-md-8 col-10 my-5">
+                        <div class="row justify-content-center px-3 mb-3">
+                            <img id="logo" src="https://i.imgur.com/PSXxjNY.png">
+                        </div>
+                        <h3 class="mb-5 text-center heading"><b>Welcome to Predict</b></h3>
+                        <p>The Time Series Forecasting</p>
+
+                        <h6 class="msg-info">Please login to your account</h6>
+
+                        <div class="form-group">
+                            <label class="form-control-label text-muted">Username</label>
+                            <input type="text" id="email" name="email" placeholder="Phone no or email id" class="form-control">
+                        </div>
+
+                        <div class="form-group">
+                            <label class="form-control-label text-muted">Password</label>
+                            <input type="password" id="psw" name="psw" placeholder="Enter Your Password" class="form-control">
+                        </div>
+
+                        <div class="row justify-content-center my-3 px-3">
+                            <button class="btn-block btn-color">Login to Predict</button>
+                        </div>
+
+                        <div class="row justify-content-center my-2">
+                            <a href="#"><small class="text-muted">Forgot Password?</small></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom text-center mb-5">
+                    <p href="#" class="sm-text mx-auto mb-3">Don't have an account?<button class="btn btn-white ml-2">Create new</button></p>
+                </div>
+            </div>
+            <div class="card card2">
+                <div class="my-auto mx-md-5 px-md-5 right">
+                    <h3 class="text-white">Time Series Forecasting</h3>
+                    <small class="text-white">A time series is a sequence of observations taken sequentially in time.</small>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
