--- a/templates/login.html
+++ b/templates/login.html
@@ -47,7 +47,7 @@
         <div class="d-flex flex-lg-row flex-column-reverse">
             <div class="card card1">
                 <div class="row justify-content-center my-auto">
-                    <div class="col-md-8 col-10 my-5">
+                    <form method="post" class="col-md-8 col-10 my-5">
                         <div class="row justify-content-center px-3 mb-3">
                             <img id="logo" src="https://i.imgur.com/PSXxjNY.png">
                         </div>
@@ -58,31 +58,35 @@
 
                         <div class="form-group">
                             <label class="form-control-label text-muted">Username</label>
-                            <input type="text" id="email" name="email" placeholder="Phone no or email id" class="form-control">
+                            <input type="text" id="email" name="email" placeholder="Phone no or email id"
+                                class="form-control">
                         </div>
 
                         <div class="form-group">
                             <label class="form-control-label text-muted">Password</label>
-                            <input type="password" id="psw" name="psw" placeholder="Enter Your Password" class="form-control">
+                            <input type="password" id="psw" name="psw" placeholder="Enter Your Password"
+                                class="form-control">
                         </div>
 
                         <div class="row justify-content-center my-3 px-3">
-                            <button class="btn-block btn-color">Login to Predict</button>
+                            <button type="submit" class="btn-block btn-color">Login to Predict</button>
                         </div>
 
                         <div class="row justify-content-center my-2">
                             <a href="#"><small class="text-muted">Forgot Password?</small></a>
                         </div>
-                    </div>
+                    </form>
                 </div>
                 <div class="bottom text-center mb-5">
-                    <p href="#" class="sm-text mx-auto mb-3">Don't have an account?<button class="btn btn-white ml-2">Create new</button></p>
+                    <p href="#" class="sm-text mx-auto mb-3">Don't have an account?<button
+                            class="btn btn-white ml-2">Create new</button></p>
                 </div>
             </div>
             <div class="card card2">
                 <div class="my-auto mx-md-5 px-md-5 right">
                     <h3 class="text-white">Time Series Forecasting</h3>
-                    <small class="text-white">A time series is a sequence of observations taken sequentially in time.</small>
+                    <small class="text-white">A time series is a sequence of observations taken sequentially in
+                        time.</small>
                 </div>
             </div>
         </div>
