--- a/templates/register.html
+++ b/templates/register.html
@@ -45,6 +45,7 @@
         </div>
     </div>
 </div> -->
+
 <section class="h-100 bg-dark">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -97,5 +98,11 @@
     </div>
 </div>
 </div> 
+
+</div>
+</div>
+</div>
+</section>
+
 
 {% endblock %}
