login page image

--- a/templates/login.html
+++ b/templates/login.html
@@ -102,7 +102,7 @@
                    <marquee behavior="alternate" direction="left" scrollamount="3" style="background-color:aquamarine"><small class="text-black">A time series is a sequence of observations taken sequentially in
                     time.</small></marquee> 
                 </div>
-                <img src="static/images/login.jpg.crdownload" width="791px" height="650px">
+                <img src="static/images/image2.jpg" width="791px" height="650px">
             </div>
         </div>
     </div>
