--- a/templates/register.html
+++ b/templates/register.html
@@ -53,9 +53,10 @@
           <div class="card card-registration my-4">
             <div class="row g-0">
               <div class="col-xl-6 d-none d-xl-block">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img4.webp"
+                <!-- <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img4.webp"
                   alt="Sample photo" class="img-fluid"
-                  style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />
+                  style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" /> -->
+                <img src="static/images/image.jpg" width="680px" height="580px">
               </div>
               <div class="col-xl-6">
                 <div class="card-body p-md-5 text-black">
