sign in sign up image

--- a/templates/login.html
+++ b/templates/login.html
@@ -60,6 +60,7 @@
                 <div class="row justify-content-center my-auto">
                     <form method="post" class="col-md-8 col-10 my-5">
                         <div class="row justify-content-center px-3 mb-3">
+                            {% include "notify.html" %}
                             <!-- <img id="logo" src="https://i.imgur.com/PSXxjNY.png"> -->
                             <img id="logo" src="static/images/logo.png">
                         </div>
