--- a/templates/register.html
+++ b/templates/register.html
@@ -2,49 +2,7 @@
 
 
 {% block body %}
-<!-- <style>
-    .mb-3{
-        font-family: 'Akaya Telivigala';font-size: 22px;
-    }
-</style>
-<div class="container">
-    <div class="row">
-        <div class="col-md-5 mx-auto">
-            <h3 class="text-center p-3">
-            <b style="color: rgb(242, 247, 250);">REGISTER </b>         
-            {% include "notify.html" %}
-                
-            </h3>
-            <form method="post" class="card" style="background-color: hwb(344 48% 12%);">
-                <div class="card-body">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username">
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="Password" class="form-control" id="password" name="password">
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label for="confirm_password" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirm_password" name="confirm_password">
-                    </div>
-                    
-                    <div class="">
-                        <button type="submit" class="btn btn-primary"text-align="center">Submit</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div> -->
+
 
 <section class="h-100 bg-dark">
     <div class="container py-5 h-100">
@@ -53,15 +11,13 @@
           <div class="card card-registration my-4">
             <div class="row g-0">
               <div class="col-xl-6 d-none d-xl-block">
-                <!-- <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img4.webp"
-                  alt="Sample photo" class="img-fluid"
-                  style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" /> -->
-                <img src="static/images/image.jpg" width="680px" height="580px">
+                
+                <img src="static/images/image.jpg" width="635px" height="580px">
               </div>
         {% include "notify.html" %}
-              <div class="col-xl-6">
+              <div class="col-xl-6" style="background-color: rgba(199, 122, 122, 0.544);">
                 <div class="card-body p-md-5 text-black">
-                  <h3 class="mb-5 text-uppercase">Predict Registration Form</h3>
+                  <h3 class="mb-5 text-uppercase" style="color:rgba(1, 19, 19, 0.908); text-align:center;">Create Your Account</h3>
   
                   <div class="row">
                     <div class="mb-3">
@@ -70,12 +26,7 @@
                         <input type="text" id="username" name="username" class="form-control form-control-lg" />
                       </div>
                     </div>
-                    <!-- <div class="col-md-6 mb-4">
-                      <div class="form-outline">
-                        <input type="text" id="form3Example1n" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Example1n">Last name</label>
-                      </div>
-                    </div> -->
+                    
                   </div>
                   <div class="mb-3">
                     <label for="email" class="form-label">E-mail</label>
