--- a/templates/login.html
+++ b/templates/login.html
@@ -56,7 +56,7 @@
 <div class="container px-4 py-5 mx-auto">
     <div class="card card0">
         <div class="d-flex flex-lg-row flex-column-reverse">
-            <div class="card card1">
+            <div class="card card1" style="background-color: rgb(242, 242, 225);">
                 <div class="row justify-content-center my-auto">
                     <form method="post" class="col-md-8 col-10 my-5">
                         <div class="row justify-content-center px-3 mb-3">
@@ -64,11 +64,11 @@
                             <!-- <img id="logo" src="https://i.imgur.com/PSXxjNY.png"> -->
                             <img id="logo" src="static/images/logo.png">
                         </div>
-                        <h3 class="mb-5 text-center heading">
-                            <b>Welcome to Predict</b></h3>
-                        <p>The Time Series Forecasting</p>
+                        <!-- <h3 class="mb-5 text-center heading">
+                            <b style=" color: rgb(26, 9, 210);" >Welcome to Predict </b> </h3>
+                        <p>The Time Series Forecasting</p> -->
 
-                        <h6 class="msg-info">Please login to your account</h6>
+                        <h4 class="msg-info"> Login to your account</h4>
 
                         <div class="form-group">
                             <label class="form-control-label text-muted">Username</label>
@@ -86,20 +86,17 @@
                             <button type="submit" class="btn-block btn-color">Login to Predict</button>
                         </div>
 
-                        <div class="row justify-content-center my-2">
-                            <a href="#"><small class="text-muted">Forgot Password?</small></a>
-                        </div>
-                    </form>
+                        </form>
                 </div>
                 <div class="bottom text-center mb-5">
-                    <a href="/register" style="text-decoration: none; color: black;" class="sm-text mx-auto mb-3">Don't have an account?
+                    <a href="/register" style="text-decoration: none; color: rgb(145, 10, 10);" class="sm-text mx-auto mb-3">Don't have an account?
                         <br><button
                             class="btn btn-white ml-2">Create new</button></a>
                 </div>
             </div>
-            <div class="card card2">
-                <div class="my-auto mx-md-5 px-md-5 right">
-                   <center> <h3 class="text-black">Time Series Forecasting</h3> </center>
+            <div class="card card2" style="background-color: rgb(242, 242, 225);">
+                <div class="my-auto mx-md-5 px-md-5 right" >
+                   <h2 style="text-align: center;" class="text-black">Time Series Forecasting</h2> 
                    <marquee behavior="alternate" direction="left" scrollamount="3" style="background-color:aquamarine"><small class="text-black">A time series is a sequence of observations taken sequentially in
                     time.</small></marquee> 
                 </div>
