--- a/templates/home.html
+++ b/templates/home.html
@@ -9,15 +9,15 @@
         font-family: 'Akaya Telivigala';font-size: 22px;
         color : whitesmoke;
         margin-left: 20px;
-        background-color: rgba(31, 45, 54, 0.567);
+          /* background-color: rgba(31, 45, 54, 0.567); */
     }
     .pi1{
         font-family: 'Akaya Telivigala';font-size: 22px;
-        color:rgb(128, 189, 230);
+        color:rgb(183, 10, 45);
         margin-left: 20px;
         font-weight: bold;
         font-size: 28px;
-        background-color: rgba(54, 31, 39, 0.667);
+        /* background-color: rgba(54, 31, 39, 0.667); */
 
     }
 </style>
@@ -31,15 +31,17 @@ This technique is used to forecast values and make future predictions. <br>
 <br>
 Examples :
 <br>
-Profit/ loss Of a college <br>
-Find average expenditure <br>
-Forecast Admission records <br>
-Forecast Placement records <br>
+Profit/ loss Of a Company/Institute/Business etc <br>
+Forecast average expenditure <br>
+Admission records <br>
+Placement records <br>
 Traffic Forecasting <br>
 Bet Forecasting <br>
+Budget Analysis<br>
+It is used in  Military planning<br>
 <!-- <img src="/static/images/forestock.gif" width: 250px> -->
 </p>
-<iframe src="https://onedrive.live.com/embed?cid=E80342899EBC2DE7&resid=E80342899EBC2DE7%21110&authkey=AMFS-DpOggNJ_R8&em=2" width="300px" height="500px" frameborder="0" scrolling="no"></iframe>
+<!-- <iframe src="https://onedrive.live.com/embed?cid=E80342899EBC2DE7&resid=E80342899EBC2DE7%21110&authkey=AMFS-DpOggNJ_R8&em=2" width="300px" height="500px" frameborder="0" scrolling="no"></iframe> -->
 </div>
 </div>
 
