--- a/templates/login.html
+++ b/templates/login.html
@@ -49,26 +49,22 @@
 }
 </style>
 
-<section class="h-100 bg-dark">
-<div class="container py-5 h-100">
-<div class="row d-flex justify-content-center align-items-center h-100" >
+
+<div class="container py-3 h-100">
+<div class="row d-flex justify-content-center align-items-center" >
 <class class="col" >
-<div class="container px-4 py-5 mx-auto">
+<div class="container px-4 py-10 mx-auto ">
     <div class="card card0">
         <div class="d-flex flex-lg-row flex-column-reverse">
             <div class="card card1" style="background-color: rgb(242, 242, 225);">
                 <div class="row justify-content-center my-auto">
-                    <form method="post" class="col-md-8 col-10 my-5">
+                    <form method="post" class="col-md-10 col-10 my-5">
                         <div class="row justify-content-center px-3 mb-3">
                             {% include "notify.html" %}
                             <!-- <img id="logo" src="https://i.imgur.com/PSXxjNY.png"> -->
                             <img id="logo" src="static/images/logo.png">
                         </div>
-                        <!-- <h3 class="mb-5 text-center heading">
-                            <b style=" color: rgb(26, 9, 210);" >Welcome to Predict </b> </h3>
-                        <p>The Time Series Forecasting</p> -->
-
-                        <h4 class="msg-info"> Login to your account</h4>
+                           <h4 class="msg-info"> Login to your account</h4>
 
                         <div class="form-group">
                             <label class="form-control-label text-muted">Username</label>
@@ -83,7 +79,7 @@
                         </div>
 
                         <div class="row justify-content-center my-3 px-3">
-                            <button type="submit" class="btn-block btn-color">Login to Predict</button>
+                            <button type="submit" class="btn-block btn-color" style="background-color: rgb(179, 75, 75);">Login to Predict</button>
                         </div>
 
                         </form>
