flash message to train dataset

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,10 +11,9 @@
 }
 </style>
 
-
-<div class="container py-3 h-100">
+<div class="container py-3">
 <div class="row d-flex justify-content-center align-items-center" >
-<class class="col" >
+<class class="col">
 <div class="container px-4 py-10 mx-auto ">
     <div class="card card0">
         <div class="d-flex flex-lg-row flex-column-reverse">
@@ -22,7 +21,6 @@
                 <div class="row justify-content-center my-auto">
                     <form method="post" class="col-md-10 col-10 my-5">
                         <div class="row justify-content-center px-3 mb-3">
-                            <!-- {% include "notify.html" %} -->
                        
                             <img id="logo" src="static/images/logo.png">
                         </div>
