--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     }
 
     body {
-      background-image: url("/static/images/back.jpg");
+      background-image: url("/static/images/background.png");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
