--- a/templates/files.html
+++ b/templates/files.html
@@ -28,7 +28,7 @@ table {
 {% block body %}
     <h3 class="text-center p-3">
         <b style="color: rgb(242, 247, 250);">Uploaded Files </b>         
-        {% include "notify.html" %}
+        <!-- {% include "notify.html" %} -->
         
     </h3>
 <div class="card shadow-lg m-5">
