--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@
                         </div>
 
                         <div class="row justify-content-center my-3 px-3">
-                            <button type="submit" class="btn-block btn-color" style="background-color: rgb(179, 75, 75);">Login to Predict</button>
+                            <button type="submit" class="btn-block btn-color" style="background-color: rgb(179, 75, 75); color:azure">Login to Predict</button>
                         </div>
 
                         </form>
