--- a/templates/train.html
+++ b/templates/train.html
@@ -43,6 +43,11 @@
                     <a href="/train_timeseries?x={{session.col1}}&y={{session.col2}}&f={{session.filepath}}"
                         class="btn btn-block btn-danger">Train
                         Timeseries model</a>
+                        <div class="card shadow-sm m-1" style="background-color: white;"> &nbsp;&nbsp;
+                            Column 1 :    {{session.col1}} &nbsp;&nbsp;
+                            Column 2 :    {{session.col2}}  <br> &nbsp;&nbsp;
+                            File :    {{session.filepath}}
+                            </div>
                 </div>
             </div>
         </div>
