--- a/templates/register.html
+++ b/templates/register.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="">
-                  <button type="submit" class="btn btn-primary" text-align="center">Submit</button>
+                  <button type="submit" class="btn btn-primary" text-align="center">Register to Predict</button>
                 </div>
               </form>
             </div>
