--- a/templates/upload.html
+++ b/templates/upload.html
@@ -12,7 +12,7 @@
                 <b style="color: rgb(242, 247, 250);">UPLOAD </b>
             </h3>
             <form class="card" method="post" enctype="multipart/form-data">
-                <div class="card-header" style="background-color: rgb(186, 33, 33);">
+                <div class="card-header" style="background-color: rgb(186, 33, 33); color: rgb(239, 211, 176);">
                     <p class="lead"
                         style="text-align: center; margin-top: 2%;  font-family: 'Akaya Telivigala';font-size: 26px;">
                         <b>Please Upload Dataset</b>
@@ -21,7 +21,7 @@
                 <div class="card-body"
                     style="background-color: rgb(250, 250, 250);  font-family: 'Akaya Telivigala';font-size: 22px;">
                     <div class="form-group">
-                        <label for="imageId">file</label>
+                        <label for="imageId">File</label>
                         <input type="file" name="file" class="form-control-file" name="filepath" id="filepath"
                             placeholder="browse the dataset" aria-describedby="imageHelp">
 
