--- a/templates/home.html
+++ b/templates/home.html
@@ -55,7 +55,7 @@ It is used in  Military planning<br>
 Market and Demand Trends <br>
 Weather Forecasting <br>
 Sales Prediction <br>
-Businnes Prediction <br>
+Business Prediction <br>
 Traffic Forecasting <br>
 Budget Analysis<br>
 </p>
